<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ArduinoSettingsFragment">
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientSelection" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:spinnerMode="dialog"/>
    <ImageView
            android:src="@drawable/robot_arm"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientSelection"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/app_name"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientSelection"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:orientation="vertical"
            android:stretchColumns="*" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/grip"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewGrip"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <SeekBar
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="179"
                    android:progress="90"
                    android:id="@+id/seekBarGrip"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/wristPitch"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <SeekBar
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="179"
                    android:progress="90"
                    android:id="@+id/seekBarWristPitch"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/wristRoll"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewWristRoll"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <SeekBar
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="179"
                    android:progress="90"
                    android:id="@+id/seekBarWristRoll"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/elbow"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewElbow"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <SeekBar
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="179"
                    android:progress="90"
                    android:id="@+id/seekBarElbow"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/shoulder"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewShoulder"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <SeekBar
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="179"
                    android:progress="90"
                    android:id="@+id/seekBarShoulder"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/waist"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewWaist"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <SeekBar
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="179"
                    android:progress="90"
                    android:id="@+id/seekBarWaist"
            />
        </TableRow>
    </TableLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/constraintLayout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">

        <Button
                android:text="@string/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnBluetoothScan"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>